Remove ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -6,30 +6,10 @@ epoch_*
 *.pth
 *.mp4
 *.pyc
-./model_ours/checkpoints/*/*
+model_ours/checkpoints/*/*
 checkpoints.zip
-model_ours/checkpoints/checkpoint
-model_ours/checkpoints/GoogleEarth/level_one/checkpoint
-model_ours/checkpoints/GoogleEarth/level_one_regular/checkpoint
-model_ours/checkpoints/GoogleEarth/level_three/checkpoint
-model_ours/checkpoints/GoogleEarth/level_three_regular/checkpoint
-model_ours/checkpoints/GoogleEarth/level_two/checkpoint
-model_ours/checkpoints/GoogleEarth/level_two_regular/checkpoint
-model_ours/checkpoints/GoogleEarth/regression_original/checkpoint
-model_ours/checkpoints/GoogleEarth/regression_stage_1/checkpoint
-model_ours/checkpoints/GoogleEarth/regression_stage_2/checkpoint
-model_ours/checkpoints/GoogleEarth/regression_stage_3/checkpoint
-model_ours/checkpoints/GoogleMap/level_one/checkpoint
-model_ours/checkpoints/GoogleMap/level_three/checkpoint
-model_ours/checkpoints/GoogleMap/level_two/checkpoint
-model_ours/checkpoints/GoogleMap/regression_original/checkpoint
-model_ours/checkpoints/GoogleMap/regression_stage_1/checkpoint
-model_ours/checkpoints/GoogleMap/regression_stage_2/checkpoint
-model_ours/checkpoints/GoogleMap/regression_stage_3/checkpoint
-model_ours/checkpoints/MSCOCO/level_one/checkpoint
-model_ours/checkpoints/MSCOCO/level_three/checkpoint
-model_ours/checkpoints/MSCOCO/level_two/checkpoint
-model_ours/checkpoints/MSCOCO/regression_original/checkpoint
-model_ours/checkpoints/MSCOCO/regression_stage_1/checkpoint
-model_ours/checkpoints/MSCOCO/regression_stage_2/checkpoint
-model_ours/checkpoints/MSCOCO/regression_stage_3/checkpoint
+model_ours/checkpoints/*
+model_ours/checkpoints_/*
+Dataset/*
+model_CLKN/checkpoints/*
+model_ours/checkpoints/*
